--- a/ninjafoodProject/public/index.html
+++ b/ninjafoodProject/public/index.html
@@ -6,18 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="index.js" defer></script>
 </head>
 
 <body class="text-gray-600 font-body">
   <div class="grid md:grid-cols-3"><!--content wrapper -->
     <div class="md:col-span-1 md:flex md:justify-end">
       <nav class="text-right">
-        <div>
+        <div class="flex justify-between items-center">
           <h1 class="font-bold uppercase p-4 border-b border-gray-100">
             <a href="/" class="hover:text-gray-700">Food Ninja</a>
           </h1>
+          <div class="px-4 cursor-pointer md:hidden">
+            <svg class="w-6" id="burger" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+            </svg>
+            
+          </div>
         </div>
-        <ul class="text-sm mt-6">
+        <ul class="text-sm mt-6 hidden md:block" id="menu">
           <li class="text-gray-700 font-bold py-1">
             <a href="#" class="px-4 flex justify-end border-r-4 border-primary">
               <span>Home</span>
@@ -57,8 +64,8 @@
 
     <main class="px-16 py-6 bg-gray-100 md:col-span-2">
       <div class="flex justify-center md:justify-end">
-        <a href="#" class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white">Log in</a>
-        <a href="#" class="text-primary ml-2 btn border-primary md:border-2 hover:bg-primary hover:text-white">Sign up</a>
+        <a href="#" class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-in duration-500">Log in</a>
+        <a href="#" class="text-primary ml-2 btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-in duration-500">Sign up</a>
       </div>
 
       <header>
@@ -124,7 +131,7 @@
           <!-- cards go here -->
         </div>
         <div class="flex justify-center">
-          <div class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner">Load more</div>
+          <div class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300">Load more</div>
         </div>
       </div>
     </main>
